service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-sample-service
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
